# fma-custom-models

./: .gitignore  Makefile  README.md  pyproject.toml
fma/: _config_manager.py  _constants.py  _dto.py  _messages.py  _serialization.py  _utils.py  auth.py
fma/cli/: __init__.py  _agent_client.py  agent_tools.py  agents.py  api_key.py  delete.py  deploy.py  init.py  login.py  logout.py  logs.py  main.py  runs.py  set_env.py  update.py
fma/toolkit/decorators/: remote.py
fma/toolkit/fields/: audio.py  base.py  file.py  image.py  url.py
fma/toolkit/model/: __init__.py  base.py
